# manifest_validator

./: .gitignore  Dockerfile  pyproject.toml
manifest_validator/: __main__.py  validator.py
tests/: test_manifest_validator.py
tests/examples/: bad.toml
