[tool.poetry]
name = "manifest_validator"
version = "0.1.0"
description = ""
authors = ["Laurence Smith <laurence.smith@airelogic.com>"]

[tool.poetry.dependencies]
python = "^3.8"
schematics = "^2.1.0"
toml = "^0.10.1"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.790"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
